<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:configChanges="locale|orientation"
    tools:context=".activities.LanguagesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/languages_explication"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/languages_explication"
            android:textSize="20sp"
            tools:visibility="visible" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="20dp"/>

        <Button
            android:id="@+id/english_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/english_button" />

        <Button
            android:id="@+id/french_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/french_button" />

        <Button
            android:id="@+id/italian_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/italian_button" />

        <Button
            android:id="@+id/german_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/german_button" />

        <Button
            android:id="@+id/spanish_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spanish_button" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>