<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.GameActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/warning"
            android:textColor="@color/my_orange"
            android:textSize="20sp"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/current_operation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/operation_on_screen"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:visibility="visible" />

        <EditText
            android:id="@+id/answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="2022"
            android:inputType="number"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/good_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good_answer"
            android:textColor="@color/my_green"
            android:textSize="20sp"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/wrong_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wrong_answer"
            android:textColor="@color/my_red"
            android:textSize="20sp"
            tools:visibility="visible" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50dp"/>

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit" />

        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="200dp"/>

        <Button
            android:id="@+id/menu_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>