<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SoundsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/sounds_explication"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sounds_explication"
            android:textSize="20sp"
            tools:visibility="visible" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="30dp"/>

        <Button
            android:id="@+id/sound_on_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sound_on_button" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="10dp"/>

        <Button
            android:id="@+id/sound_off_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sound_off_button" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>